Functionify The Code

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Chlo | Management App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="content/css/style.css">
+    <link rel="stylesheet" href="content/css/animate.css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Slab|Satisfy" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Caveat|Nanum+Pen+Script" rel="stylesheet">
     <link rel="stylesheet" href="content/css/font-awesome.min.css">
@@ -17,8 +18,6 @@
       <div class="search">
       <h1>Find Your Perfect Place!</h1>
       <p class="center"><input type="text" id ="getCity"><i class="fa fa-search" id="searchPlaces"></i></p>
-      <br><br><br>
-      <hr>
     </div>
     </div>
 <div>
@@ -37,11 +36,10 @@
 <h1 class="headings">What's Your Plan?</h1>
 <ul></ul>
 </div>
-<div class="results">
-</div>
-<div class="popup">
 
-</div>
+<div class="results"></div>
+<div class="foods"></div>
+<div class="popup"></div>
     <script src="content/js/geolocation.js" charset="utf-8"></script>
   </body>
 </html>
