--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 <i class="fa fa-search" id="search" aria-hidden="true"></i>
 </footer>
 
+<script src="content/js/popup.js" charset="utf-8" ></script>
   <script src="content/js/geolocation.js" charset="utf-8"></script>
   </body>
 </html>
